--- a/home.html
+++ b/home.html
@@ -11,6 +11,7 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="css.css" />
+    <script src="home.js"></script>
   </head>
   <body>
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
@@ -58,18 +59,21 @@
     <div class="container">
       <div class="row t-12">
         <div class="col-sm">
-          <article>
-            <div class="thumb">
-              <a href="#">
-                <img
-                  src="https://i1-thethao.vnecdn.net/2023/10/04/1696352402039-23fb3d7c-da0c-49-8938-9688-1696406541.jpg?w=1020&h=0&q=100&dpr=1&fit=crop&s=BkJHghIWszlU1XNDA7Bq2A"
-                  class="img-thumbnail"
-                  alt="lorem"
-                />
-              </a>
-            </div>
-            <h2>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla, ducimus?</h2>
-          </article>
+          <div class="story-top">
+            <article>
+              <div class="thumb">
+                <a href="#">
+                  <img
+                    src="https://i1-thethao.vnecdn.net/2023/10/04/1696352402039-23fb3d7c-da0c-49-8938-9688-1696406541.jpg?w=1020&h=0&q=100&dpr=1&fit=crop&s=BkJHghIWszlU1XNDA7Bq2A"
+                    class="img-thumbnail"
+                    alt="lorem"
+                  />
+                </a>
+              </div>
+
+              <h2 class="titleh1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla, ducimus?</h2>
+            </article>
+          </div>
         </div>
         <div class="col-sm">
           <article>
